--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
 		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode37</a></li>
 		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode39</a></li>
 		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode41</a></li>
-		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode43</a></li>
+		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/E43-Xd9b5chKYt.mp4" controls></video></div>Episode43</a></li>
 		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode45</a></li>
 		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode47</a></li>
 		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode49</a></li>
 		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode51</a></li>
 		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode53</a></li>
-		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619e2a27011ed30059a9d5fc_885498.mp4" controls></video></div>Episode55</a></li>
-		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode57</a></li>
+		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619e2a27011 " controls></video></div>Episode55</a></li>
+		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/E57-BvIPK734BE.mp4" controls></video></div>Episode57</a></li>
 		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode59</a></li>
 		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode61</a></li>
 		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode63</a></li>
@@ -63,7 +63,6 @@
 		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode77</a></li>
 		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode79</a></li>
 		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode81</a></li>
-		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode83</a></li>
 	</ul>
 	</div>
 	<div class="one-half">
@@ -83,7 +82,7 @@
 <a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode26</a></li>
 <a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode28</a></li>
 <a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode30</a></li>
-<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode32</a></li>
+<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/E32-cZUKuO4EG9.mp4" controls></video></div>Episode32</a></li>
 <a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode34</a></li>
 <a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode36</a></li>
 <a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode38</a></li>
@@ -98,7 +97,7 @@
 <a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode56</a></li>
 <a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode58</a></li>
 <a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode60</a></li>
-<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode62</a></li>
+<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/E62-BdAIKWWown.mp4" controls></video></div>Episode62</a></li>
 <a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode64</a></li>
 <a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode66</a></li>
 <a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode68</a></li>
@@ -109,7 +108,6 @@
 <a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode78</a></li>
 <a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode80</a></li>
 <a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode82</a></li>
-<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode84</a></li>
 	</ul>
 	</div>
 </body>
