--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode27</a></li>
 		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode29</a></li>
 		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode31</a></li>
-		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode33</a></li>
+		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/E33-oo6G5n9OzV.mp4" controls></video></div>Episode33</a></li>
 		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode35</a></li>
 		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode37</a></li>
 		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode39</a></li>
@@ -47,13 +47,13 @@
 		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode45</a></li>
 		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode47</a></li>
 		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode49</a></li>
-		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode51</a></li>
+		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/E51-FES2veEuf1.mp4" controls></video></div>Episode51</a></li>
 		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode53</a></li>
-		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619e2a27011 " controls></video></div>Episode55</a></li>
+		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/E55-q2RokI7rjN.mp4" controls></video></div>Episode55</a></li>
 		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/E57-BvIPK734BE.mp4" controls></video></div>Episode57</a></li>
 		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode59</a></li>
 		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode61</a></li>
-		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode63</a></li>
+		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/E63-7uTcLwrb1H.mp4" controls></video></div>Episode63</a></li>
 		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode65</a></li>
 		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode67</a></li>
 		<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode69</a></li>
@@ -101,7 +101,7 @@
 <a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode64</a></li>
 <a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode66</a></li>
 <a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode68</a></li>
-<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode70</a></li>
+<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/E70-NxCRRK_UQd.mp4" controls></video></div>Episode70</a></li>
 <a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode72</a></li>
 <a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode74</a></li>
 <a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode76</a></li>
